handle api login

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -29,7 +29,7 @@
                                 </form>
                                 <hr>
                                 <div class="text-center">
-                                    <a class="small" routerLink="../singup">Tạo tài khoản</a>
+                                    <a class="small" routerLink="../signup">Tạo tài khoản</a>
                                 </div>
                                 <div class="text-center">
                                     <a class="small" routerLink="../login">Bạn đã có tài khoản? Đăng Nhập</a>
