--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,15 +16,22 @@
                                 <div class="text-center">
                                     <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                 </div>
-                                <form class="user">
+                                <!-- Form -->
+                                <form class="user" [formGroup]="loginForm" (ngSubmit)="login()">
                                     <div class="form-group">
-                                        <input type="email" class="form-control form-control-user"
+                                        <input type="email" [formControlName]="'email'" class="form-control form-control-user"
                                             id="exampleInputEmail" aria-describedby="emailHelp"
-                                            placeholder="Enter Email Address...">
+                                            placeholder="Enter Email Address..." required>
+                                        <span *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched" class="help-block">
+                                            &nbsp;&nbsp;&nbsp;Vui lòng nhập email hợp lệ
+                                        </span>
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control form-control-user"
+                                        <input type="password" [formControlName]="'password'" class="form-control form-control-user"
                                             id="exampleInputPassword" placeholder="Password">
+                                        <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched" class="help-block">
+                                            &nbsp;&nbsp;&nbsp;Vui lòng nhập mật khẩu hợp lệ
+                                        </span>
                                     </div>
                                     <div class="form-group">
                                         <div class="custom-control custom-checkbox small">
@@ -33,9 +40,9 @@
                                                 Me</label>
                                         </div>
                                     </div>
-                                    <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                    <button type="submit" class="btn btn-primary btn-user btn-block">
                                         Login
-                                    </a>
+                                    </button>
                                     <hr>
                                     <a href="index.html" class="btn btn-google btn-user btn-block">
                                         <i class="fab fa-google fa-fw"></i> Login with Google
@@ -44,12 +51,13 @@
                                         <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
                                     </a>
                                 </form>
+                                <!-- End Form -->
                                 <hr>
                                 <div class="text-center">
                                     <a class="small" routerLink="../forgot-password">Quên mật khẩu</a>
                                 </div>
                                 <div class="text-center">
-                                    <a class="small" routerLink="../singup">Tạo tài khoản</a>
+                                    <a class="small" routerLink="../signup">Tạo tài khoản</a>
                                 </div>
                             </div>
                         </div>
