add screen singup of hiep

--- a/src/app/auth/singup/singup.component.css
+++ b/src/app/auth/singup/singup.component.css
@@ -1,9 +1,9 @@
-body {
+/* body {
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-  }
+  } */
   /* label {
     padding-left: 35px; 
     position: relative;
