handle api singup

--- a/src/app/admin/shared/modal-logout/modal-logout.component.html
+++ b/src/app/admin/shared/modal-logout/modal-logout.component.html
@@ -17,7 +17,7 @@
             <div class="modal-body">Chọn "Đăng xuất" bên dưới nếu bạn thực sự muốn kết thúc phiên làm việc của mình.</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Hủy bỏ</button>
-                <a class="btn btn-primary" href="auth">Đăng xuất</a>
+                <a class="btn btn-primary" href="auth" (click)="logout()">Đăng xuất</a>
             </div>
         </div>
     </div>
