--- a/src/app/admin/shared/header/header.component.html
+++ b/src/app/admin/shared/header/header.component.html
@@ -8,7 +8,7 @@
     <form
         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
         <div class="input-group">
-            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+            <input type="text" class="form-control bg-light border-0 small" placeholder="Tìm kiếm..."
                 aria-label="Search" aria-describedby="basic-addon2">
             <div class="input-group-append">
                 <button class="btn btn-primary" type="button">
@@ -198,7 +198,7 @@
         <li class="nav-item dropdown no-arrow" *ngIf="!isLoggedIn">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Please Login</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Vui lòng đăng nhập</span>
                 <img class="img-profile rounded-circle"
                     src="assets/img/undraw_profile.svg">
             </a>
@@ -207,7 +207,7 @@
                 aria-labelledby="userDropdown">
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Login
+                    Đăng nhập
                 </a>
             </div>
         </li>
