--- a/src/app/auth/singup/singup.component.html
+++ b/src/app/auth/singup/singup.component.html
@@ -28,10 +28,10 @@
                                     Giới tính:  
                                 </div>
                             <div class="radio">
-                                <input id="radio-1" name="radio" type="radio" [value]="0" [formControlName]="'gender'">
+                                <input id="radio-1" name="gender" type="radio" [value]="true" [formControlName]="'gender'">
                                 <label for="radio-1" class="radio-label">Nam </label>
                               
-                                <input id="radio-2" name="radio" type="radio" [value]="1" [formControlName]="'gender'">
+                                <input id="radio-2" name="gender" type="radio" [value]="false" [formControlName]="'gender'">
                                 <label  for="radio-2" class="radio-label">Nữ</label>
                               </div>
                         </div>
