--- a/src/app/admin/staff-manager/view-staff/view-staff.component.html
+++ b/src/app/admin/staff-manager/view-staff/view-staff.component.html
@@ -8,8 +8,18 @@
 
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
+        <form>
         <div class="card-header py-3">
             <h6 class="font-weight-bold text-primary">Danh sách nhân viên</h6>
+
+            <!-- BUTTON THÊM NHÂN VIÊN -->
+            <div class="addNhanVien">
+                <button type="submit" class="btn btn-primary btn-user ">
+                    Thêm nhân viên mới
+                </button>
+            </div>
+
+            <!-- ô tìm kiếm -->
             <div class="search-box">
                 <i class="material-icons">&#xE8B6;</i>
                 <input type="text" class="form-control" placeholder="Tìm kiếm nhân viên&hellip;">
@@ -113,6 +123,7 @@
                 </table>
             </div>
         </div>
+    </form>
     </div>
 </div>
 <!-- /.container-fluid -->
