--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -1,1 +1,72 @@
-<p>create-staff works!</p>
+<div class="container">
+
+    <div class="card o-hidden border-0 shadow-lg my-5">
+        <div class="card-body p-0">
+            <!-- Nested Row within Card Body -->
+            <div class="row">
+                <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                <div class="col-lg-7">
+                    <div class="p-5">
+                        <div class="text-center">
+                            <h1 class="h4 text-gray-900 mb-4">Thêm nhân viên mới!</h1>
+                        </div>
+                        <form class="user" [formGroup]="signupForm" (ngSubmit)="signup()">
+                            <div class="form-group">                             
+                                    <input type="text" [formControlName]="'username'" class="form-control form-control-user" id="name"
+                                        placeholder="Họ và tên">                                                         
+                            </div>
+                            <div class="form-group">
+                                <input type="email" [formControlName]="'email'" class="form-control form-control-user" id="email"
+                                    placeholder=" Email">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" [formControlName]="'phone'" class="form-control form-control-user" id="phone"
+                                    placeholder=" Số điện thoại">
+                            </div>
+                            <div class="form-group row">                                
+                                <div class="radio-label">
+                                    Giới tính:  
+                                </div>
+                            <div class="radio">
+                                <input id="radio-1" name="radio" type="radio" [value]="0" [formControlName]="'gender'">
+                                <label for="radio-1" class="radio-label">Nam </label>
+                              
+                                <input id="radio-2" name="radio" type="radio" [value]="1" [formControlName]="'gender'">
+                                <label  for="radio-2" class="radio-label">Nữ</label>
+                              </div>
+                        </div>
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input type="password" [formControlName]="'password'" class="form-control form-control-user"
+                                        id="pass" placeholder="Mật khẩu">
+                                </div>
+                                <div class="col-sm-6">
+                                    <input type="password" [formControlName]="'repassword'" class="form-control form-control-user"
+                                        id="exampleRepeatPassword" placeholder="Nhập lại mật khẩu">
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-user btn-block">
+                                Đăng ký tài khoản
+                            </button>
+                            <hr>
+                            <a href="index.html" class="btn btn-google btn-user btn-block">
+                                <i class="fab fa-google fa-fw"></i> Đăng ký với Google
+                            </a>
+                            <a href="index.html" class="btn btn-facebook btn-user btn-block">
+                                <i class="fab fa-facebook-f fa-fw"></i> Đăng ký với Facebook
+                            </a>
+                        </form>
+                        <hr>
+                        <div class="text-center">
+                            <a class="small" routerLink="../forgot-password">Quên mật khẩu</a>
+                        </div>
+                        <div class="text-center">
+                            <a class="small" routerLink="../login">Bạn đã có tài khoản? Đăng Nhập</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
