--- a/src/app/auth/singup/singup.component.html
+++ b/src/app/auth/singup/singup.component.html
@@ -10,7 +10,7 @@
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Tạo một tài khoản!</h1>
                         </div>
-                        <form class="user" [formGroup]="signupForm" (ngSubmit)="signup()">
+                        <form class="user" [formGroup]="signupForm" (ngSubmit)="signup()" (ngSubmit)="checkPassword()">
                             <div class="form-group">                             
                                     <input type="text" [formControlName]="'username'" class="form-control form-control-user" id="name"
                                         placeholder="Họ và tên">                                                         
