--- a/src/app/admin/shared/header/header.component.html
+++ b/src/app/admin/shared/header/header.component.html
@@ -198,7 +198,7 @@
         <li class="nav-item dropdown no-arrow" *ngIf="!isLoggedIn">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Vui lòng đăng nhập</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Đăng nhập</span>
                 <img class="img-profile rounded-circle"
                     src="assets/img/undraw_profile.svg">
             </a>
