--- a/src/app/admin/staff-manager/view-staff/view-staff.component.html
+++ b/src/app/admin/staff-manager/view-staff/view-staff.component.html
@@ -14,9 +14,9 @@
 
             <!-- BUTTON THÊM NHÂN VIÊN -->
             <div class="addNhanVien">
-                <button type="submit" class="btn btn-primary btn-user ">
-                    Thêm nhân viên mới
-                </button>
+                <a class="btn btn-primary btn-user" routerLink="create-staff">
+                    Thêm nhân viên
+                </a>
             </div>
 
             <!-- ô tìm kiếm -->
@@ -76,7 +76,7 @@
                             <td>hiep.jpg</td>
                             <td>
                                 <a href="#" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
-                                <a href="#" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                                <a routerLink="create-staff" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                                 <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                             </td>
                         </tr>
@@ -94,7 +94,7 @@
                             <td>hiep.jpg</td>
                             <td>
                                 <a href="#" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
-                                <a href="#" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                                <a routerLink="create-staff" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                                 <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                             </td>
                         </tr>
@@ -112,7 +112,7 @@
                             <td>hiep.jpg</td>
                             <td>
                                 <a href="#" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
-                                <a href="#" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                                <a routerLink="create-staff" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                                 <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                             </td>
                         </tr>
