--- a/src/app/admin/staff-manager/create-staff/create-staff.component.css
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: center;
   } */
   /* label {
     padding-left: 35px; 
@@ -14,6 +14,14 @@
   /* .radio {
     margin:0.5rem;
   } */
+
+  /* @media (min-width: 992px) */
+  .col-lg-7 {
+    flex: 0 0 58.33333%;
+    max-width: 58.33333%;
+    margin-left: 256px;
+  }
+
   .radio input[type=radio] {
     position: absolute;
     opacity: 0;
@@ -53,3 +61,6 @@
   .radio-label{
     margin-left: 25px;
   } 
+
+/*  */
+
