--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -4,65 +4,77 @@
         <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row">
-                <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                <!-- <div class="col-lg-5 d-none d-lg-block bg-register-image"></div> -->
                 <div class="col-lg-7">
                     <div class="p-5">
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Thêm nhân viên mới!</h1>
                         </div>
                         <form class="user">
-                            <div class="form-group">                             
-                                    <input type="text" class="form-control form-control-user" id="name"
-                                        placeholder="Họ và tên">                                                         
+
+                            <div class="form-group">
+                                <label> Họ và tên </label>
+                                <input type="text" class="form-control form-control-user" id="name" placeholder="" required>
                             </div>
                             <div class="form-group">
-                                <input type="email"  class="form-control form-control-user" id="email"
-                                    placeholder=" Email">
+                                <label> Email </label>
+                                <input type="email" class="form-control form-control-user" id="email" placeholder="">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control form-control-user" id="phone"
-                                    placeholder=" Số điện thoại">
+                                <label> Số điện thoại </label>
+                                <input type="text" class="form-control form-control-user" id="cardId" placeholder="">
                             </div>
-                            <div class="form-group row">                                
-                                <div class="radio-label">
-                                    Giới tính:  
-                                </div>
-                            <div class="radio">
-                                <input id="radio-1" name="radio" type="radio" >
-                                <label for="radio-1" class="radio-label">Nam </label>
-                              
-                                <input id="radio-2" name="radio" type="radio" >
-                                <label  for="radio-2" class="radio-label">Nữ</label>
-                              </div>
-                        </div>
+                            <div class="form-group">
+                                <label> Số chứng minh nhân dân - thẻ căn cước </label>
+                                <input type="text" class="form-control form-control-user" id="phone" placeholder="">
+                            </div>
+                            <div class="form-group">
+                                <label> Địa chỉ </label>
+                                <input type="text" class="form-control form-control-user" id="address" placeholder="">
+                            </div>
+                            <div class="form-group">
+                                <label> Ngày sinh </label>
+                                <input type="date" class="form-control form-control-user" id="birthday" placeholder="">
+                            </div>
                             <div class="form-group row">
-                                <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input type="password"  class="form-control form-control-user"
-                                        id="pass" placeholder="Mật khẩu">
+                                <div class="radio-label">
+                                    Giới tính:
                                 </div>
-                                <div class="col-sm-6">
-                                    <input type="password"  class="form-control form-control-user"
-                                        id="exampleRepeatPassword" placeholder="Nhập lại mật khẩu">
+                                <div class="radio">
+                                    <input id="radio-1" name="radio" type="radio">
+                                    <label for="radio-1" class="radio-label">Nam </label>
+
+                                    <input id="radio-2" name="radio" type="radio">
+                                    <label for="radio-2" class="radio-label">Nữ</label>
                                 </div>
                             </div>
+
+
+                            <label> Vị trí </label>
+                            <div class="form-group">
+                                <div class="form-control form-control-user">
+                                    <select name="subject">
+                                        <option disabled="disabled" selected="selected">Choose option</option>
+                                        <option>Subject 1</option>
+                                        <option>Subject 2</option>
+                                        <option>Subject 3</option>
+                                    </select>
+                                    <div class="select-dropdown"></div>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label> Ảnh </label>
+                                <input type="file" class="form-control form-control-user"
+                                    id="image" placeholder="">
+                            </div>
+                          
                             <button type="submit" class="btn btn-primary btn-user btn-block">
-                                Đăng ký tài khoản
+                                Thêm nhân viên
                             </button>
-                            <hr>
-                            <a href="index.html" class="btn btn-google btn-user btn-block">
-                                <i class="fab fa-google fa-fw"></i> Đăng ký với Google
-                            </a>
-                            <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                <i class="fab fa-facebook-f fa-fw"></i> Đăng ký với Facebook
-                            </a>
+
                         </form>
-                        <hr>
-                        <div class="text-center">
-                            <a class="small" routerLink="../forgot-password">Quên mật khẩu</a>
-                        </div>
-                        <div class="text-center">
-                            <a class="small" routerLink="../login">Bạn đã có tài khoản? Đăng Nhập</a>
-                        </div>
+
                     </div>
                 </div>
             </div>
