them form updateStaff vaf chi tiet nhan vien

--- a/src/app/admin/staff-manager/detail-staff/detail-staff.component.html
+++ b/src/app/admin/staff-manager/detail-staff/detail-staff.component.html
@@ -1,1 +1,47 @@
-<p>detail-staff works!</p>
+
+<!-- Link lấy giao diện https://www.niemvuilaptrinh.com/article/Product-Card-Snippet-trong-Bootstrap-4 -->
+  
+  <div class="wrapper">
+    <div class="product-img">
+
+      <!-- ảnh nhân viên -->
+      <img src="https://media-cdn.laodong.vn/Storage/NewsPortal/2020/8/21/829850/Bat-Cuoi-Truoc-Nhung-07.jpg" height="420" width="327">
+    </div>
+    <div class="product-info">
+
+      <div class="product-text">
+
+        <!-- tên nhân viên -->
+        <h1>Nguyễn Thanh Hiệp</h1> 
+        <br>
+        <br>
+
+        <!-- email -->
+        <h2>hiep@gmail.com </h2>
+
+        <!-- SĐT -->
+        <h2>0365834845</h2>
+        
+        <!-- Tuổi -->
+        <h2>02/01/1970 </h2>
+
+        <!-- Giới Tính -->
+        <h2>Nam </h2>
+
+        <!-- Vai Trò -->
+        <h2>Super Admin </h2>
+
+        <!-- Địa Chỉ -->
+        <p>Số 4 Ngõ Chùa Hưng Ký, phố Minh Khai, Quận Hai Bà Trưng, Thành phố Hà Nội</p>
+      </div>
+
+      <div class="product-price-btn">
+        <!-- <p><span>78</span>$</p> -->
+        <!-- <button type="button">buy now</button> -->
+      </div>
+
+    </div>
+  </div>
+
+  <!-- <link href="https://fonts.googleapis.com/css?family=Bentham|Playfair+Display|Raleway:400,500|Suranna|Trocchi" rel="stylesheet"> -->
+
