--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -7,7 +7,7 @@
                 <div class="col-lg-7">
                     <div class="p-5">
                         <div class="text-center">
-                            <h1 class="h4 text-gray-900 mb-4">Thêm nhân viên mới!</h1>
+                            <h1 class="h4 text-gray-900 mb-4">THÊM NHÂN VIÊN MỚI!</h1>
                         </div>
                         <form class="user" [formGroup]="StaffForm" (ngSubmit)="createStaff()">
                             <div class="form-group">
@@ -66,6 +66,20 @@
                                 <input type="file" class="form-control form-control-user"
                                     id="image" placeholder="">
                             </div>
+
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <label>Mật khẩu</label>
+                                    <input type="password" class="form-control form-control-user"
+                                        id="pass" placeholder="" required>
+                                </div>
+                                <div class="col-sm-6">
+                                    <label>Nhập lại mật khẩu</label>
+                                    <input type="password" class="form-control form-control-user"
+                                        id="exampleRepeatPassword" placeholder="" required >
+                                </div>
+                            </div>
+                            
                             <button type="submit" class="btn btn-primary btn-user btn-block">
                                 Thêm nhân viên
                             </button>
