--- a/src/app/admin/staff-manager/update-staff/update-staff.component.html
+++ b/src/app/admin/staff-manager/update-staff/update-staff.component.html
@@ -1,1 +1,91 @@
-<p>update-staff works!</p>
+<div class="container">
+    <div class="card o-hidden border-0 shadow-lg my-5">
+        <div class="card-body p-0">
+            <!-- Nested Row within Card Body -->
+            <div class="row">
+                <!-- <div class="col-lg-5 d-none d-lg-block bg-register-image"></div> -->
+                <div class="col-lg-7">
+                    <div class="p-5">
+                        <div class="text-center">
+                            <h1 class="h4 text-gray-900 mb-4">CẬP NHẬP THÔNG TIN NHÂN VIÊN!</h1>
+                        </div>
+                        <form class="user" [formGroup]="StaffForm" (ngSubmit)="createStaff()">
+                            <div class="form-group">
+                                <label> Email </label>
+                                <input type="email" [formControlName]="'email'" class="form-control form-control-user" id="email" placeholder="" disabled>
+                            </div>
+                            <div class="form-group">
+                                <label> Họ và tên </label>
+                                <h1>{{this.timestamp | date:'dd/MM/yyyy'}}</h1>
+                                <input type="text" [formControlName]="'name'" class="form-control form-control-user" id="name" placeholder=""  required>
+                            </div>                          
+                            <div class="form-group">
+                                <label> Số điện thoại </label>
+                                <input type="text" [formControlName]="'phone'" class="form-control form-control-user" id="cardId" placeholder="" required>
+                            </div>
+                            <div class="form-group">
+                                <label> Số chứng minh nhân dân - thẻ căn cước </label>
+                                <input type="text" [formControlName]="'cardId'" class="form-control form-control-user" id="phone" placeholder="" required>
+                            </div>
+                            <div class="form-group">
+                                <label> Địa chỉ </label>
+                                <input type="text" [formControlName]="'address'" class="form-control form-control-user" id="address" placeholder="" required>
+                            </div>
+                            <div class="form-group">
+                                <label> Ngày sinh </label>
+                                <input type="date" [formControlName]="'birthday'" class="form-control form-control-user" id="birthday" placeholder="" required>
+                            </div>
+                            <div class="form-group row">
+                                <div class="radio-label">
+                                    Giới tính:
+                                </div>
+                                <div class="radio">
+                                    <input id="radio-1" type="radio" name="gender"  [value]="true" [formControlName]="'gender'">
+                                    <label for="radio-1" class="radio-label">Nam </label>
+
+                                    <input id="radio-2" type="radio" name="gender" [value]="false" [formControlName]="'gender'">
+                                    <label for="radio-2" class="radio-label">Nữ</label>
+                                </div>
+                            </div>
+
+                            <label>Vai Trò</label>
+                            <div class="form-group">
+                                <div class="form-control form-control-user">
+                                    <select name="subject" [formControlName]="'role'" required>
+                                        <option disabled="disabled" selected="selected">Lựa Chọn</option>
+                                        <option>Admin</option>
+                                        <option>Super Admin</option>
+                                        <option>Khách Hàng</option>
+                                    </select>
+                                    <div class="select-dropdown"></div>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label> Ảnh </label>
+                                <input type="file" class="form-control form-control-user"
+                                    id="image" placeholder="">
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <label>Mật khẩu</label>
+                                    <input type="password" class="form-control form-control-user"
+                                        id="pass" placeholder="" required>
+                                </div>
+                                <div class="col-sm-6">
+                                    <label>Nhập lại mật khẩu</label>
+                                    <input type="password" class="form-control form-control-user"
+                                        id="exampleRepeatPassword" placeholder="" required >
+                                </div>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary btn-user btn-block">
+                                Cập nhập
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
