--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.valid-false {
+    color: rgb(235, 23, 23);
+}
+
+.valid-true {
+  color: rgb(0, 224, 49);
+}
