--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -17,6 +17,14 @@
                             <div class="form-group">
                                 <label> Email </label>
                                 <input type="email" [formControlName]="'email'" class="form-control form-control-user" id="email" placeholder="">
+                                <div *ngIf="StaffForm.get('email').touched">
+                                    <span *ngIf="StaffForm.get('email').errors?.required" class="help-block">
+                                        Email không được bỏ trống
+                                    </span>
+                                    <span *ngIf="StaffForm.get('email').errors?.email" class="help-block">
+                                        Hãy nhập email hợp lệ
+                                    </span>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label> Số điện thoại </label>
@@ -69,12 +77,12 @@
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
                                     <label>Mật khẩu</label>
-                                    <input type="password" class="form-control form-control-user"
+                                    <input type="password" [formControlName]="'password'" class="form-control form-control-user"
                                         id="pass" placeholder="" required>
                                 </div>
                                 <div class="col-sm-6">
                                     <label>Nhập lại mật khẩu</label>
-                                    <input type="password" class="form-control form-control-user"
+                                    <input type="repassword" [formControlName]="'repassword'" class="form-control form-control-user"
                                         id="exampleRepeatPassword" placeholder="" required >
                                 </div>
                             </div>
