--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,17 +21,27 @@
                                     <div class="form-group">
                                         <input type="email" [formControlName]="'email'" class="form-control form-control-user"
                                             id="exampleInputEmail" aria-describedby="emailHelp"
-                                            placeholder="Nhập địa chỉ Email..." required>
-                                        <span *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched" class="help-block">
-                                            &nbsp;&nbsp;&nbsp;Vui lòng nhập email hợp lệ
-                                        </span>
+                                            placeholder="Nhập địa chỉ Email...">
+                                        <div *ngIf="loginForm.get('email').touched && loginForm.get('email').invalid" class="valid-false">
+                                            <span *ngIf="loginForm.get('email').errors?.required">
+                                                &nbsp;&nbsp;&nbsp;Email không được bỏ trống
+                                            </span>
+                                            <span *ngIf="loginForm.get('email').errors?.email">
+                                                &nbsp;&nbsp;&nbsp;Hãy nhập email hợp lệ
+                                            </span>
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <input type="password" [formControlName]="'password'" class="form-control form-control-user"
                                             id="exampleInputPassword" placeholder="Mật khẩu">
-                                        <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched" class="help-block">
-                                            &nbsp;&nbsp;&nbsp;Vui lòng nhập mật khẩu hợp lệ
-                                        </span>
+                                        <div *ngIf="loginForm.get('password').touched && loginForm.get('password').invalid" class="valid-false">
+                                            <span *ngIf="loginForm.get('password').errors?.required">
+                                                &nbsp;&nbsp;&nbsp;Mật khẩu không được bỏ trống
+                                            </span>
+                                            <span *ngIf="loginForm.get('password').errors?.minlength">
+                                                &nbsp;&nbsp;&nbsp;Hãy nhập không dưới 6 ký tự
+                                            </span>
+                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <div class="custom-control custom-checkbox small">
